--- a/labs/02-lab/lab02.ipynb
+++ b/labs/02-lab/lab02.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "4       162   3.241          1.15  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,11 +221,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cookie           object\n",
+       "ingredients      object\n",
+       "calories          int64\n",
+       "radius          float64\n",
+       "cost_to_make    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO: check the data types of the columns"
+    "#TODO: check the data types of the columns\n",
+    "df.dtypes"
    ]
   },
   {
@@ -239,13 +256,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cookie</th>\n",
+       "      <th>ingredients</th>\n",
+       "      <th>calories</th>\n",
+       "      <th>radius</th>\n",
+       "      <th>cost_to_make</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>laddoo lemon</td>\n",
+       "      <td>[\"flour\",\"lemon juice\",\"sugar\",\"ghee\"]</td>\n",
+       "      <td>170</td>\n",
+       "      <td>3.102</td>\n",
+       "      <td>0.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>nevadito</td>\n",
+       "      <td>[\"flour\",\"chocolate chips\",\"milk\",\"vanilla ext...</td>\n",
+       "      <td>224</td>\n",
+       "      <td>4.069</td>\n",
+       "      <td>1.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>red velvet rauw</td>\n",
+       "      <td>[\"flour\",\"cocoa powder\",\"butter\",\"red food col...</td>\n",
+       "      <td>198</td>\n",
+       "      <td>3.780</td>\n",
+       "      <td>1.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>bad berry bunny</td>\n",
+       "      <td>[\"flour\",\"blueberries\",\"sugar\",\"butter\"]</td>\n",
+       "      <td>191</td>\n",
+       "      <td>4.148</td>\n",
+       "      <td>1.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>orange ozuna</td>\n",
+       "      <td>[\"flour\",\"orange juice\",\"sugar\",\"vegetable oil\"]</td>\n",
+       "      <td>162</td>\n",
+       "      <td>3.241</td>\n",
+       "      <td>1.15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            cookie                                        ingredients  \\\n",
+       "0     laddoo lemon             [\"flour\",\"lemon juice\",\"sugar\",\"ghee\"]   \n",
+       "1         nevadito  [\"flour\",\"chocolate chips\",\"milk\",\"vanilla ext...   \n",
+       "2  red velvet rauw  [\"flour\",\"cocoa powder\",\"butter\",\"red food col...   \n",
+       "3  bad berry bunny           [\"flour\",\"blueberries\",\"sugar\",\"butter\"]   \n",
+       "4     orange ozuna   [\"flour\",\"orange juice\",\"sugar\",\"vegetable oil\"]   \n",
+       "\n",
+       "   calories  radius  cost_to_make  \n",
+       "0       170   3.102          0.67  \n",
+       "1       224   4.069          1.04  \n",
+       "2       198   3.780          1.07  \n",
+       "3       191   4.148          1.39  \n",
+       "4       162   3.241          1.15  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#TODO: clean the dataframe and \n",
     "# print the head again to make sure \n",
-    "# the changes took effect"
+    "# the changes took effect\n",
+    "df.dropna()\n",
+    "\n",
+    "df.head()\n"
    ]
   },
   {
@@ -258,11 +372,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cookie</th>\n",
+       "      <th>ingredients</th>\n",
+       "      <th>calories</th>\n",
+       "      <th>radius</th>\n",
+       "      <th>cost_to_make</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>118 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     cookie  ingredients  calories  radius  cost_to_make\n",
+       "0     False        False     False   False         False\n",
+       "1     False        False     False   False         False\n",
+       "2     False        False     False   False         False\n",
+       "3     False        False     False   False         False\n",
+       "4     False        False     False   False         False\n",
+       "..      ...          ...       ...     ...           ...\n",
+       "113   False        False     False   False         False\n",
+       "114   False        False     False   False         False\n",
+       "115   False        False     False   False         False\n",
+       "116   False        False     False   False         False\n",
+       "117   False        False     False   False         False\n",
+       "\n",
+       "[118 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO: use the isnull method to make sure your data is clean"
+    "#TODO: use the isnull method to make sure your data is clean\n",
+    "df.isnull()"
    ]
   },
   {
@@ -276,11 +535,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['laddoo lemon', 'nevadito', 'red velvet rauw', 'bad berry bunny',\n",
+       "       'orange ozuna', 'minty miami', 'chocolate'], dtype=object)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO: see what cookies are in the dataset"
+    "#TODO: see what cookies are in the dataset\n",
+    "df[\"cookie\"].unique()"
    ]
   },
   {
@@ -293,12 +565,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "red velvet rauw    18\n",
+       "laddoo lemon       17\n",
+       "nevadito           17\n",
+       "bad berry bunny    17\n",
+       "orange ozuna       17\n",
+       "minty miami        17\n",
+       "chocolate          15\n",
+       "Name: cookie, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#TODO: use value_counts() to see how many \n",
-    "# cookies of each type there are"
+    "# cookies of each type there are\n",
+    "df[\"cookie\"].value_counts()\n"
    ]
   },
   {
