more ways to parse the data

--- a/labs/02-lab/lab02.ipynb
+++ b/labs/02-lab/lab02.ipynb
@@ -604,11 +604,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         laddoo lemon\n",
+       "1             nevadito\n",
+       "2      red velvet rauw\n",
+       "3                  bbb\n",
+       "4         orange ozuna\n",
+       "            ...       \n",
+       "113          chocolate\n",
+       "114       laddoo lemon\n",
+       "115           nevadito\n",
+       "116    red velvet rauw\n",
+       "117                bbb\n",
+       "Name: cookie, Length: 118, dtype: object"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO: change bad berry bunny data elements to \"bbb\""
+    "#TODO: change bad berry bunny data elements to \"bbb\"\n",
+    "df[\"cookie\"].replace(\"bad berry bunny\", \"bbb\")"
    ]
   },
   {
@@ -621,11 +644,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         laddoo lemon\n",
+       "1             nevadito\n",
+       "2      red velvet rauw\n",
+       "3      bad berry bunny\n",
+       "4         orange_ozuna\n",
+       "            ...       \n",
+       "113          chocolate\n",
+       "114       laddoo lemon\n",
+       "115           nevadito\n",
+       "116    red velvet rauw\n",
+       "117    bad berry bunny\n",
+       "Name: cookie, Length: 118, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO: adjust orange ozuna as described"
+    "#TODO: adjust orange ozuna as described\n",
+    "df[\"cookie\"].str.replace(\"orange ozuna\", \"orange_ozuna\")"
    ]
   },
   {
@@ -638,12 +684,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         laddoo\n",
+       "1       nevadito\n",
+       "2            red\n",
+       "3            bad\n",
+       "4         orange\n",
+       "         ...    \n",
+       "113    chocolate\n",
+       "114       laddoo\n",
+       "115     nevadito\n",
+       "116          red\n",
+       "117          bad\n",
+       "Name: cookie, Length: 118, dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#TODO: adjust all cookies so only the first word\n",
-    "# is used as the cookie name"
+    "# is used as the cookie name\n",
+    "df[\"cookie\"].str.split(\" \").str[0]"
    ]
   },
   {
