trying group by and filter functions

--- a/labs/02-lab/lab02.ipynb
+++ b/labs/02-lab/lab02.ipynb
@@ -725,15 +725,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      1.17\n",
+       "1      1.54\n",
+       "2      1.57\n",
+       "3      1.89\n",
+       "4      1.65\n",
+       "       ... \n",
+       "113    1.92\n",
+       "114    2.50\n",
+       "115    2.11\n",
+       "116    1.83\n",
+       "117    1.86\n",
+       "Name: cost_to_make, Length: 118, dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Don't edit this method\n",
     "def adjust_cost(cost):\n",
     "    return cost + 0.5\n",
     "\n",
-    "#TODO: use apply() to adjust the cost_to_make column."
+    "#TODO: use apply() to adjust the cost_to_make column.\n",
+    "df[\"cost_to_make\"].apply(adjust_cost)"
    ]
   },
   {
@@ -762,11 +785,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f83a6604850>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO: group by cookie type"
+    "#TODO: group by cookie type\n",
+    "df.groupby(\"cookie\")"
    ]
   },
   {
@@ -779,11 +814,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f83a9062610>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO: group by cookie type and ingredients"
+    "#TODO: group by cookie type and ingredients\n",
+    "df.groupby([\"cookie\", \"ingredients\"])"
    ]
   },
   {
@@ -796,11 +843,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      False\n",
+       "1      False\n",
+       "2      False\n",
+       "3      False\n",
+       "4      False\n",
+       "       ...  \n",
+       "113    False\n",
+       "114    False\n",
+       "115    False\n",
+       "116    False\n",
+       "117    False\n",
+       "Name: radius, Length: 118, dtype: bool"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO: filter using the boolean expression"
+    "#TODO: filter using the boolean expression\n",
+    "df[\"radius\"] > 4.3"
    ]
   },
   {
@@ -813,12 +883,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f83a9062190>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#TODO: filter the data using the boolean expression\n",
-    "# then group by cookie column"
+    "# then group by cookie column\n",
+    "df[df[\"radius\"] > 4.3].groupby(\"cookie\")"
    ]
   },
   {
