trying more pandas methods

--- a/labs/02-lab/lab02.ipynb
+++ b/labs/02-lab/lab02.ipynb
@@ -918,7 +918,7 @@
    "outputs": [],
    "source": [
     "#TODO: add a column to the dataframe that is the\n",
-    "# calories per radius"
+    "# calories per radius\n"
    ]
   },
   {
