--- a/worksheets/worksheet_03.ipynb
+++ b/worksheets/worksheet_03.ipynb
@@ -107,7 +107,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- What and who the model is used / intended for"
+    "- What and who the model is used / intended for\n",
+    "- process data -> explore data -> extract features -> create model\n",
+    "- "
    ]
   },
   {
@@ -124,9 +126,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Death List\n",
+    "- transportation routes\n",
+    "- family pictures\n",
+    "- textbook"
+   ]
   },
   {
    "attachments": {},
@@ -137,9 +145,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "find the pattern of users of a website, the pages they review vs the time."
+   ]
   },
   {
    "attachments": {},
@@ -150,9 +161,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "find the correlation between the temperature and the time"
+   ]
   }
  ],
  "metadata": {
