--- a/worksheets/worksheet_03.ipynb
+++ b/worksheets/worksheet_03.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Zheyu Yang\n",
+    "UID: U41174832\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -24,9 +24,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "It must be falsifiable, meaning it can be observed and tested."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,9 +39,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "For hypothesis (x, x+1, x+2) try (1, 2, 3) and (3, 2, 1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,9 +54,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A. (100, 102, 104)\n",
+    "\n",
+    "B. (5, 7, 9)\n",
+    "\n",
+    "C. (1, 2, 3)\n",
+    "\n",
+    "A or B?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,9 +79,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- (2, 4, 6) positive\n",
+    "- (6, 8, 10) negative\n",
+    "- (1, 3, 5) negative"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,9 +96,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A. (100, 102, 104)\n",
+    "\n",
+    "B. (5, 7, 9)\n",
+    "\n",
+    "C. (1, 2, 3)\n",
+    "\n",
+    "C"
+   ]
   },
   {
    "attachments": {},
@@ -89,9 +118,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Process Data -> Explore Data -> Extract Features -> Create Model"
+   ]
   },
   {
    "attachments": {},
@@ -107,9 +139,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- record \n",
+    "- graph \n",
+    "- image \n",
+    "- text "
+   ]
   },
   {
    "attachments": {},
@@ -120,9 +158,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Clustering, finding interesting features in data."
+   ]
   },
   {
    "attachments": {},
@@ -133,9 +174,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Separate positives from negatives about tumor size vs. age."
+   ]
   }
  ],
  "metadata": {
@@ -154,12 +198,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "2df53de82fe139b23b9a340061c8527273b7fa86551030a1983ff618b17018eb"
    }
   }
  },
