John Antony Lab 2

--- a/labs/02-lab/lab02.ipynb
+++ b/labs/02-lab/lab02.ipynb
@@ -1630,16 +1630,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<AxesSubplot: >"
+       "<AxesSubplot: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1664,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1673,7 @@
        "<AxesSubplot: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
