--- a/worksheets/worksheet_03.ipynb
+++ b/worksheets/worksheet_03.ipynb
@@ -1,14 +1,13 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Akarvin Raja Prajan Jeyashanmugaraja\n",
+    "UID: U90639904\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -26,7 +25,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1) The hypothesis must be specific and clearly defined\n",
+    "\n",
+    "2) The hypothesis must be consistent with existing knowledge and observations\n",
+    "\n",
+    "3) The hypothesis should be open to disproof, and it should be possible to demonstrate its falseness if its in incorrect"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,7 +43,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(x,x+1,x+2) as hypothesis\n",
+    "\n",
+    "try (1,2,3) and (3,2,1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +59,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "A, B"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,7 +78,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1) positive\n",
+    "2) negative\n",
+    "3) negative"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +94,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "C"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -91,10 +109,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1) Process steps\n",
+    "2) Explore Data\n",
+    "3) Extract Features\n",
+    "4) Create the model"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -109,10 +131,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1) medical history\n",
+    "2) nodes and edges\n",
+    "3) Satellite photo\n",
+    "4) An article "
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -122,10 +148,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Customer segmentation"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,12 +162,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "email spam filtering"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -154,9 +183,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.10.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
