--- a/worksheets/worksheet_03.ipynb
+++ b/worksheets/worksheet_03.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Hitanshi Jain\n",
+    "UID: U95073268\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -24,6 +24,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -36,6 +37,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -48,6 +50,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -64,9 +67,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(2, 4, 6) : positive example \n",
+    "(6, 8 , 10) : negative example\n",
+    "(1, 3, 5) : negative example"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,6 +84,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -89,6 +98,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -107,9 +117,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "record: database entry\n",
+    "graph: social media links\n",
+    "image: collection of x-ray data\n",
+    "text: collection of text translation prompts"
+   ]
   },
   {
    "attachments": {},
@@ -120,6 +136,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -133,6 +150,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -154,12 +172,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.9.1 (tags/v3.9.1:1e5d33e, Dec  7 2020, 17:08:21) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
    }
   }
  },
