--- a/labs/02-lab/lab02.ipynb
+++ b/labs/02-lab/lab02.ipynb
@@ -90,7 +90,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"cookies.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the DataFrame used? Well, Dataframes are a data structure that Pandas uses to store data. Dataframes are similar to tables in a database. Dataframes have rows and columns. Each row represents a single data point, and each column represents a feature of the data point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will then make sure we imported the data correctly by printing out the first 10 rows of the data, using the `head()` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -163,131 +186,82 @@
        "      <td>1.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>minty miami</td>\n",
+       "      <td>[\"flour\",\"mint extract\",\"sugar\",\"butter\"]</td>\n",
+       "      <td>204</td>\n",
+       "      <td>3.964</td>\n",
+       "      <td>0.84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>113</th>\n",
+       "      <th>6</th>\n",
        "      <td>chocolate</td>\n",
        "      <td>[\"flour\",\"chocolate chips\",\"sugar\",\"butter\"]</td>\n",
-       "      <td>227</td>\n",
-       "      <td>4.085</td>\n",
-       "      <td>1.42</td>\n",
+       "      <td>243</td>\n",
+       "      <td>3.684</td>\n",
+       "      <td>1.17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>114</th>\n",
+       "      <th>7</th>\n",
        "      <td>laddoo lemon</td>\n",
        "      <td>[\"flour\",\"lemon juice\",\"sugar\",\"ghee\"]</td>\n",
-       "      <td>170</td>\n",
-       "      <td>3.916</td>\n",
-       "      <td>2.00</td>\n",
+       "      <td>178</td>\n",
+       "      <td>3.989</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>115</th>\n",
+       "      <th>8</th>\n",
        "      <td>nevadito</td>\n",
        "      <td>[\"flour\",\"chocolate chips\",\"milk\",\"vanilla ext...</td>\n",
-       "      <td>211</td>\n",
-       "      <td>3.915</td>\n",
-       "      <td>1.61</td>\n",
+       "      <td>216</td>\n",
+       "      <td>3.848</td>\n",
+       "      <td>1.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>116</th>\n",
+       "      <th>9</th>\n",
        "      <td>red velvet rauw</td>\n",
        "      <td>[\"flour\",\"cocoa powder\",\"butter\",\"red food col...</td>\n",
-       "      <td>197</td>\n",
-       "      <td>3.906</td>\n",
-       "      <td>1.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>bad berry bunny</td>\n",
-       "      <td>[\"flour\",\"blueberries\",\"sugar\",\"butter\"]</td>\n",
-       "      <td>199</td>\n",
-       "      <td>4.281</td>\n",
-       "      <td>1.36</td>\n",
+       "      <td>211</td>\n",
+       "      <td>3.940</td>\n",
+       "      <td>0.76</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>118 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              cookie                                        ingredients  \\\n",
-       "0       laddoo lemon             [\"flour\",\"lemon juice\",\"sugar\",\"ghee\"]   \n",
-       "1           nevadito  [\"flour\",\"chocolate chips\",\"milk\",\"vanilla ext...   \n",
-       "2    red velvet rauw  [\"flour\",\"cocoa powder\",\"butter\",\"red food col...   \n",
-       "3    bad berry bunny           [\"flour\",\"blueberries\",\"sugar\",\"butter\"]   \n",
-       "4       orange ozuna   [\"flour\",\"orange juice\",\"sugar\",\"vegetable oil\"]   \n",
-       "..               ...                                                ...   \n",
-       "113        chocolate       [\"flour\",\"chocolate chips\",\"sugar\",\"butter\"]   \n",
-       "114     laddoo lemon             [\"flour\",\"lemon juice\",\"sugar\",\"ghee\"]   \n",
-       "115         nevadito  [\"flour\",\"chocolate chips\",\"milk\",\"vanilla ext...   \n",
-       "116  red velvet rauw  [\"flour\",\"cocoa powder\",\"butter\",\"red food col...   \n",
-       "117  bad berry bunny           [\"flour\",\"blueberries\",\"sugar\",\"butter\"]   \n",
+       "            cookie                                        ingredients  \\\n",
+       "0     laddoo lemon             [\"flour\",\"lemon juice\",\"sugar\",\"ghee\"]   \n",
+       "1         nevadito  [\"flour\",\"chocolate chips\",\"milk\",\"vanilla ext...   \n",
+       "2  red velvet rauw  [\"flour\",\"cocoa powder\",\"butter\",\"red food col...   \n",
+       "3  bad berry bunny           [\"flour\",\"blueberries\",\"sugar\",\"butter\"]   \n",
+       "4     orange ozuna   [\"flour\",\"orange juice\",\"sugar\",\"vegetable oil\"]   \n",
+       "5      minty miami          [\"flour\",\"mint extract\",\"sugar\",\"butter\"]   \n",
+       "6        chocolate       [\"flour\",\"chocolate chips\",\"sugar\",\"butter\"]   \n",
+       "7     laddoo lemon             [\"flour\",\"lemon juice\",\"sugar\",\"ghee\"]   \n",
+       "8         nevadito  [\"flour\",\"chocolate chips\",\"milk\",\"vanilla ext...   \n",
+       "9  red velvet rauw  [\"flour\",\"cocoa powder\",\"butter\",\"red food col...   \n",
        "\n",
-       "     calories  radius  cost_to_make  \n",
-       "0         170   3.102          0.67  \n",
-       "1         224   4.069          1.04  \n",
-       "2         198   3.780          1.07  \n",
-       "3         191   4.148          1.39  \n",
-       "4         162   3.241          1.15  \n",
-       "..        ...     ...           ...  \n",
-       "113       227   4.085          1.42  \n",
-       "114       170   3.916          2.00  \n",
-       "115       211   3.915          1.61  \n",
-       "116       197   3.906          1.33  \n",
-       "117       199   4.281          1.36  \n",
-       "\n",
-       "[118 rows x 5 columns]"
+       "   calories  radius  cost_to_make  \n",
+       "0       170   3.102          0.67  \n",
+       "1       224   4.069          1.04  \n",
+       "2       198   3.780          1.07  \n",
+       "3       191   4.148          1.39  \n",
+       "4       162   3.241          1.15  \n",
+       "5       204   3.964          0.84  \n",
+       "6       243   3.684          1.17  \n",
+       "7       178   3.989           NaN  \n",
+       "8       216   3.848          1.28  \n",
+       "9       211   3.940          0.76  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv(\"cookies.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What is the DataFrame used? Well, Dataframes are a data structure that Pandas uses to store data. Dataframes are similar to tables in a database. Dataframes have rows and columns. Each row represents a single data point, and each column represents a feature of the data point."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will then make sure we imported the data correctly by printing out the first 10 rows of the data, using the `head()` function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "NDFrame.head() missing 1 required positional argument: 'self'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame\n\u001b[0;32m----> 2\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhead\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: NDFrame.head() missing 1 required positional argument: 'self'"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame\n",
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
