--- a/worksheets/worksheet_03.ipynb
+++ b/worksheets/worksheet_03.ipynb
@@ -24,9 +24,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "it can be tested by experiments or observations, and the results can be either true or false"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,8 +111,7 @@
    "metadata": {},
    "source": [
     "- What and who the model is used / intended for\n",
-    "- process data -> explore data -> extract features -> create model\n",
-    "- "
+    "- process data -> explore data -> extract features -> create model"
    ]
   },
   {
@@ -185,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (v3.9.7:1016ef3790, Aug 30 2021, 16:39:15) \n[Clang 6.0 (clang-600.0.57)]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
